Support for "Sneak Peak Full Spec for a particular view in the shelf" (https://github.com/uwdata/voyager2/issues/20)
- Show Preview `<shelves>` with opacity = 0.8
- Make `<shelves>` do not send update to Pills if it's a preview shelf.
- `enablePillsPreview` flag for
- Make hovering and uncovering `<field-info>` in `<vl-plot-group>` triggers `Pills.preview`, which triggers the listener in VY2 to show preview shelf.

Follow Up TODO:
- Better Visual Design for Preview Shelf

--- a/src/components/shelves/shelves.scss
+++ b/src/components/shelves/shelves.scss
@@ -1,3 +1,7 @@
 .shelf-pane {
   margin-bottom: 20px;
 }
+
+.shelves.preview {
+  opacity: 0.8;
+}
